--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
         >
       </div>
     </div>
+    <h4 class="text-center text-uppercase mb-3 d-none d-md-block">
+      Featured Project which my best projects be choice to show
+    </h4>
     <div class="container mb-5">
       <div class="row p-4">
         <div class="col-md-6">
@@ -136,11 +139,10 @@
             explicabo eum dolore.
           </p>
           <div class="app-link mt-5 mb-3">
-            <a href="#" class="link-secondary">Launch yoga app</a>
+            <a href="#" class="link-secondary">Learn more</a>
           </div>
         </div>
       </div>
-
       <div class="row p-4">
         <div class="col-md-6">
           <h3 class="mb-3">Weather app</h3>
@@ -151,7 +153,7 @@
             explicabo eum dolore.
           </p>
           <div class="app-link mt-5 mb-3">
-            <a href="#" class="link-secondary">Launch weather app</a>
+            <a href="#" class="link-secondary">Learn more</a>
           </div>
         </div>
         <div class="col-md-6 mb-3">
@@ -162,7 +164,6 @@
           />
         </div>
       </div>
-
       <div class="row p-4">
         <div class="col-md-6">
           <img
@@ -180,14 +181,26 @@
             explicabo eum dolore.
           </p>
           <div class="app-link mt-5 mb-3">
-            <a href="#" class="link-secondary" target="blank">
-              Launch yougurt app
-            </a>
+            <a href="#" class="link-secondary" target="blank"> Learn more </a>
           </div>
         </div>
       </div>
     </div>
     <footer class="mb-5">
+      <div class="contact-box container justify-content-between mb-5 d-md-flex">
+        <div>
+          <h4>Work Inquiry</h4>
+          <p>Let's work together!</p>
+        </div>
+        <div>
+          <a
+            href="mailto:viktoriia.skakovska@gmail.com"
+            class="btn btn-works"
+            title="Contact Viktoriia Skakovska"
+            >Let`s talk here</a
+          >
+        </div>
+      </div>
       <div class="social-links d-flex justify-content-center text-center">
         <a href="#" class="" target="_blank"
           ><img
